@@ -4,6 +4,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## unreleased
+# Changed
+- Simplified navigation if only one company
+
+
 ## [1.6.0]
 # Added
 - VAT can now be disabled
